--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 40px;
 }
 
 .clearfix {
@@ -64,17 +64,17 @@ h1 {
 
 
 .container1 {
-   padding: 8px 12px;
-    width: 250px;
+   padding: 4px 6px;
+    width: 375px;
 }
 
 .container2 {
-   padding: 8px 12px;
-    width: 250px;
+   padding: 4px 6px;
+    width: 375px;
 }
-#game1 {
-    width: 250px;
-    height: 100px;
+#game1 ,#game2, #game3,#game4  {
+    width: 375px;
+    height: 150px;
     border: 1px solid #dadada;
     margin: 0 auto;
     padding: 0;
@@ -82,13 +82,13 @@ h1 {
 
 }
 
-#game1 > li {
+#game1   > li ,#game2  > li , #game3  > li ,#game4  > li {
     list-style: none;
     float: left;
     overflow: hidden;
     text-decoration:none;
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     background: #f1f1f1;
     border: 1px solid #000000;
     border-right: 1px solid #000000;
@@ -98,86 +98,5 @@ h1 {
     padding-top: 20px;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-}
-
-#game2 {
-    width: 250px;
-    height: 100px;
-    border: 1px solid #dadada;
-    margin: 0 auto;
-    padding: 0;
-    margin-bottom: 20px;
-
-}
-
-#game2 > li {
-    list-style: none;
-    float: left;
-    overflow: hidden;
-    text-decoration:none;
-    width: 50px;
-    height: 50px;
-    background: #f1f1f1;
-    border: 1px solid #000000;
-    border-right: 1px solid #000000;
-    cursor: pointer;
-    text-transform: uppercase;
-    text-align: center;
-    padding-top: 20px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-#game3 {
-    width: 250px;
-    height: 100px;
-    border: 1px solid #dadada;
-    margin: 0 auto;
-    padding: 0;
-    margin-bottom: 20px;
-}
-
-#game3 > li {
-    list-style: none;
-    float: left;
-    overflow: hidden;
-    text-decoration:none;
-    width: 50px;
-    height: 50px;
-    background: #f1f1f1;
-    border: 1px solid #000000;
-    border-right: 1px solid #000000;
-    cursor: pointer;
-    text-transform: uppercase;
-    text-align: center;
-    padding-top: 20px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-#game4 {
-    width: 250px;
-    height: 100px;
-    border: 1px solid #dadada;
-    margin: 0 auto;
-    padding: 0;
-    margin-bottom: 20px;
-}
-
-#game4 > li {
-    list-style: none;
-    float: left;
-    overflow: hidden;
-    text-decoration:none;
-    width: 50px;
-    height: 50px;
-    background: #f1f1f1;
-    border: 1px solid #000000;
-    border-right: 1px solid #000000;
-    cursor: pointer;
-    text-transform: uppercase;
-    text-align: center;
-    padding-top: 20px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+			font-size: 30px;
 }
