--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
 	font-family: arial, sans-serif;
 }
 
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+
 
 .nomargin {
 margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px;
@@ -24,7 +29,9 @@ margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 40px;
+  font-size: 30px;
+	margin: 5px;
+
 }
 
 .clearfix {
@@ -71,14 +78,15 @@ margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px;
 	 text-align:center;
 
 }
-
-
+#last_col {
+	display: flex;
+}
 #game1 ,#game2, #game3,#game4  {
-	width: 377px;
-	height: 150px;
+		width: 377px;
+		height: 150px;
     border: 1px solid #dadada;
     padding: 0;
-		margin-left: 20%;
+		margin-left: 23%;
 }
 
 #game1   > li ,#game2  > li , #game3  > li ,#game4  > li {
@@ -97,6 +105,6 @@ margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px;
     padding-top: 20px;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-			font-size: 30px;
+		font-size: 30px;
 
 }
